--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               >Projects</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -97,7 +97,7 @@
           </div>
         </div>
       </header>
-      <button class="mail__btn click">
+      <button class="mail__btn click" onclick="toggleModal()">
         <i class="fa-solid fa-envelope"></i>
       </button>
       <a href="#projects" class="scroll">
@@ -156,8 +156,8 @@
                 <i class="fas fa-spinner"></i>
             </div>
             <div class="modal__overlay modal__overlay--success">Thanks for the message! Looking forward to connecting with you soon.</div>
+            <i class="fas fa-times modal__exit click" onclick="toggleModal()"></i>
         </div>
-        <i class="fas fa-times modal__exit click"></i>
       </div>
     </section>
     <section id="projects">
@@ -247,7 +247,7 @@
                     <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white" >Instagram</a>
                     <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white" >Tiktok</a>
                     <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white" >Blog</a>
-                    <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white" >Contact Us</a>
+                    <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white" onclick="toggleModal()">Contact Us</a>
                 </div>
                 <div class="footer__copyright">Copyright &copy; 2025 by minisculebeta</div>
             </div>
