svgs added, positioned, and colored. contrast toggle functions, and contact functions

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           />
         </figure>
         <ul class="nav__link--list">
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -53,10 +53,10 @@
               >Contact</a
             >
           </li>
-          <li class="contrast">
+          <li class="nav__link" onclick="toggleContrast()">
             <a
               href="#"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black click"
+              class="adjust"
               ><i class="fa-solid fa-circle-half-stroke"></i
             ></a>
           </li>
@@ -159,6 +159,15 @@
             <i class="fas fa-times modal__exit click" onclick="toggleModal()"></i>
         </div>
       </div>
+      <img src="./images/icon crimp.svg" class="shape shape--0">
+      <img src="./images/icon drill.svg" class="shape shape--1">
+      <img src="./images/icon volume.svg" class="shape shape--2">
+      <img src="./images/icon volume.svg" class="shape shape--3">
+      <img src="./images/icon sloper 2.svg" class="shape shape--4">
+      <img src="./images/icon sloper 1.svg" class="shape shape--5">
+      <img src="./images/icon sloper 3.svg" class="shape shape--6">
+      <img src="./images/icon crimp.svg" class="shape shape--7">
+      <img src="./images/icon drill.svg" class="shape shape--8">
     </section>
     <section id="projects">
       <div class="container">
