--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </script>
   </head>
   <body>
-    <section id="landing-page">
+    <section id="landing-page" onmousemove="moveBackground(event)">
       <nav>
         <figure>
           <img
@@ -160,14 +160,14 @@
         </div>
       </div>
       <img src="./images/icon crimp.svg" class="shape shape--0">
-      <img src="./images/icon drill.svg" class="shape shape--1">
+      <img src="./images/icon drill down small.svg" class="shape shape--1">
       <img src="./images/icon volume.svg" class="shape shape--2">
-      <img src="./images/icon volume.svg" class="shape shape--3">
+      <img src="./images/icon volume upside down.svg" class="shape shape--3">
       <img src="./images/icon sloper 2.svg" class="shape shape--4">
       <img src="./images/icon sloper 1.svg" class="shape shape--5">
       <img src="./images/icon sloper 3.svg" class="shape shape--6">
       <img src="./images/icon crimp.svg" class="shape shape--7">
-      <img src="./images/icon drill.svg" class="shape shape--8">
+      <img src="./images/icon drill up.svg" class="shape shape--8">
     </section>
     <section id="projects">
       <div class="container">
