Broke the modal.... and hadn't realized it. Mail btn doesn't float, and background not moving

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./images/velocity innsbruck.png"
+                  src="./images/velocity innsbruck cropped.png"
                   class="project__img"
                   alt="Velocity"
                 />
