background fixed, modal fixed, troubleshoot modal loading

--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
       <nav>
         <div class="nav__container">
         <div class="row">
-            <figure>
-            <img
-                id="logo-dark"
-                src="./images/RCRS5000 (240x 45 px) scalable black.svg"
-                alt="RCRS5000"
-            />
-            </figure>
+            <a href="#">   
+                <figure>
+                    <img
+                        id="logo-dark"
+                        src="./images/RCRS5000 (240x 45 px) scalable black.svg"
+                        alt="RCRS5000"
+                    />
+                </figure>
+            </a>
             <ul class="nav__link--list">
             <li class="nav__link" onclick="toggleModal()">
                 <a
@@ -270,16 +272,18 @@
     <footer>
         <div class="container">
             <div class="footer__row">
-                <figure>
-                    <img class="footer__logo--img" src="./images/RCRS5000 white (240 x 45 px) scalable.svg" alt="footer logo">
-                </figure>
+                <a href="#">
+                    <figure>
+                        <img class="footer__logo--img" src="./images/RCRS5000 white (240 x 45 px) scalable.svg" alt="footer logo">
+                    </figure>
+                </a>
                 <div class="footer__social--list">
                     <a href="https://www.instagram.com/rcrs5000/" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white" >Instagram</a>
                     <a href="https://tiktok.com/rcrs5000/" target="_blank" class="footer__social--link link__hover-effect link__hover-effect--white" >Tiktok</a>
                     <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white" >Blog</a>
                     <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white" onclick="toggleModal()">Contact Us</a>
                 </div>
-                <div class="footer__copyright">Copyright &copy; 2025 by minisculebeta</div>
+                <div class="footer__copyright">Copyright &copy; 2025 (not really) RCRS5000 Worldwide</div>
             </div>
         </div>
     </footer>
